force-app/main/default/objects/ICS_AVM_ChatButtonToEPMAndLanguageMap__c/ICS_AVM_ChatButtonToEPMAndLanguageMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is to store chat buttons and its related EPM ID and language data</description>
    <label>ICS AVM ChatButton EPM and Lang Map</label>
</CustomObject>