force-app/main/default/objects/ICS_AVM_ChatButtonToEPMAndLanguageMap__c/fields/Chat_Button_Id__c.field-meta.xml
<CustomField>
    <fullName>Chat_Button_Id__c</fullName>
    <description>To store button id</description>
    <label>Chat Button Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>