force-app/main/default/objects/ICS_AVM_ChatButtonToEPMAndLanguageMap__c/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <label>Deployment Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>