force-app/main/default/objects/ICS_AVM_ChatButtonToEPMAndLanguageMap__c/fields/EPM_Id__c.field-meta.xml
<CustomField>
    <fullName>EPM_Id__c</fullName>
    <description>To store EPM Id</description>
    <label>EPM Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>