force-app/main/default/objects/ICS_AVM_ChatButtonToEPMAndLanguageMap__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if it stores default button, deployment id</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>