force-app/main/default/objects/ICS_AVM_ChatButtonToEPMAndLanguageMap__c/listViews/Priya.listView-meta.xml
<ListView>
    <fullName>Priya</fullName>
    <columns>NAME</columns>
    <columns>EPM_Id__c</columns>
    <columns>Deployment_Id__c</columns>
    <columns>Language__c</columns>
    <columns>Chat_Button_Id__c</columns>
    <columns>Is_Default__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Priya</label>
    <language>en_US</language>
</ListView>